resume white space fixes

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -237,6 +237,7 @@ pre {
 
 	.row {
 		margin-top: 40px;
+		margin-bottom: 40px;
 	}
 
 	h3 {
@@ -247,10 +248,6 @@ pre {
 		@media (min-width: 768px) {
 			text-align: right;
 		}
-	}
-
-	p:last-child {
-		margin-bottom: 0;
 	}
 }
 
